# gl-render

./: CMakeLists.txt  LICENSE
lib/: CMakeLists.txt
src/: main.cpp
src/core/: CMakeLists.txt  ShaderLoader.cpp  ShaderLoader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Types.hpp
src/core/manager/: CMakeLists.txt  ShaderManager.cpp  ShaderManager.hpp  TextureManager.hpp  Texturemanager.cpp
src/core/rendering/: CMakeLists.txt  IGameObject.hpp  Light.hpp  LoadedObject.cpp  LoadedObject.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjectLoader.cpp  ObjectLoader.hpp  TextureFormat.hpp  VertexFormat.hpp
src/init/: CMakeLists.txt  ContextInfo.hpp  InitGLEW.cpp  InitGLEW.hpp  InitSDL.cpp  InitSDL.hpp
src/scenes/: CMakeLists.txt  ImageBufferScene.cpp  ImageBufferScene.hpp  TestScene.cpp  TestScene.hpp
src/shaders/: fragment.glsl  vertex.glsl
